2005-04-03  Per Bothner  <per@bothner.com>

	* Method.java: Remove bogus @return in javadoc comment.
	* Variable.java: Likewise.

2005-03-22  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitTryStart): Create new TryState *after* we
	save any stack values, so saves come before exception range start.

2005-03-02  Per Bothner  <per@bothner.com>

	* Field.java (setConstantValue): Handle boolean and char fields.

2005-02-25  Per Bothner  <per@bothner.com>

	* CodeAttr.java (pushScope): Don't do a getLabel - it's redundant,
	since enterScope also does it, via setStartPC.

2005-01-30  Per Bothner  <per@bothner.com>

	* Access.java (toString): Fix typo.

	* InnerClassesAttr.java (print): Specificy class access flags.

2005-01-28  Per Bothner  <per@bothner.com>

	* Type.java (java_lang_Class_type):  New static field.

	* CodeAttr.java (emitPushClass): New method.

2005-01-19  Per Bothner  <per@bothner.com>

	* Access.java (CLASS_MODIFIERS, FIELD_MODIFIERS, METHOD_MODIFIERS):
	New bit-mask constants.
	(toString): Mask off inappropriate flags.

	* ClassTypeWriter.java: Make some methods public.

2005-01-15  Per Bothner  <per@bothner.com>

	* Access.java (BRIDGE, VARARGS, STRICT, SYNTHETIC, ANNOTATION):
	Add new JDK 1.4 and 1.5 modifiers.
	(toString(int,char)):  Update for new flags.

	* Type.java (setName): New protected method.
	* ObjectType.java (<init>(String)): Make public.  It makes more sense
	for "funny" types like NodeType to be ObjectType but not ClassType.
	To be used for gnu.NodeType.
	* ClassType.java (setName): Stylistic improvement.

2005-01-09  Per Bothner  <per@bothner.com>

	* ClassType.java (writeExternal): Simplify. Non-existing classes
	are now handled specialy in LitTable.

2005-01-05  Per Bothner  <per@bothner.com>

	* Type.java (array_type): New field.
	* ArrayType.java (make(Type)): Use array_type of argument.
	(make(String)): New non-public static method.
	* Type.java (getType): Use ArrayType.make(String).