@@ -1,3 +1,8 @@
+2005-04-17  Per Bothner  <per@bothner.com>
+
+	* WrappedException.java: Change JAVA5 dependencies on initCause to
+	JAVA4, which is now the default.
+
 2005-04-03  Per Bothner  <per@bothner.com>
 
 	* Procedure.java: Fix javadoc comment.
