@@ -1,3 +1,8 @@
+2005-04-17  Per Bothner  <per@bothner.com>
+
+	* ObjectType.java (getReflectClass): Do initCause on wrapper
+	RuntimeException, if Java4, which is now the default.
+
 2005-04-03  Per Bothner  <per@bothner.com>
 
 	* Method.java: Remove bogus @return in javadoc comment.
